fixed text contrast errors

--- a/public/css/large.css
+++ b/public/css/large.css
@@ -278,13 +278,13 @@
 
   .namePrice h2 {
     font-size: 18px;
-    color: #333;
+    color: black;
     margin: 5px 0;
   }
 
   .namePrice span {
     font-size: 16px;
-    color: #e67e22;
+    color: black;
     font-weight: bold;
   }
 
@@ -309,7 +309,7 @@
 
   .vehicle-title {
     font-size: 36px;
-    color: #333;
+    color: black;
     margin-bottom: 10px;
     text-align: center;
     padding: 10px;
@@ -324,13 +324,13 @@
 
   .vehicle-description {
     font-size: 16px;
-    color: #555;
+    color: black;
     margin-bottom: 10px;
   }
 
   .vehicle-price {
     font-size: 18px;
-    color: #e67e22;
+    color: black;
     font-weight: bold;
     margin-bottom: 10px;
   }
@@ -339,7 +339,7 @@
   .vehicle-color,
   .vehicle-classification {
     font-size: 14px;
-    color: #777;
+    color: black;
     margin-bottom: 5px;
   }
 
