--- a/public/css/small.css
+++ b/public/css/small.css
@@ -202,7 +202,7 @@
 
   .vehicle-title {
     font-size: 36px;
-    color: #333;
+    color: black;
     margin-bottom: 10px;
     text-align: center;
     padding: 10px;
@@ -217,13 +217,13 @@
 
   .vehicle-description {
     font-size: 16px;
-    color: #555;
+    color: black;
     margin-bottom: 10px;
   }
 
   .vehicle-price {
     font-size: 18px;
-    color: #e67e22;
+    color: black;
     font-weight: bold;
     margin-bottom: 10px;
   }
@@ -232,7 +232,7 @@
   .vehicle-color,
   .vehicle-classification {
     font-size: 14px;
-    color: #777;
+    color: black;
     margin-bottom: 5px;
   }
 
